[package]
name = "data_quality_report"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
pretty_env_logger = "0.4"

lazy_static = "1.4"
polars = { version = "0.24", features = ["lazy", "lazy_regex", "dtype-full", "describe", "abs", "mode", "unique_counts", "moment"] }
reqwest = { version = "0.11.12", features = [ "blocking" ] }
